force-app/main/default/objects/Key_Contacts__c/Key_Contacts__c.object-meta.xml
<CustomObject>
    <label>Key Contacts</label>
    <nameField>
        <displayFormat>KC {0000}</displayFormat>
        <label>Key Contacts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>