force-app/main/default/objects/Key_Contacts__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <inlineHelpText>Click to return to the Account Plan page</inlineHelpText>
    <label>Account Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>Key_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>