force-app/main/default/objects/Key_Contacts__c/fields/Accountable_for_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Accountable_for_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>See Case 03214277</description>
    <inlineHelpText>Select the Iron Mountain employee who is accountable for maintaining our relationship with this Key Contact (the &apos;relationship map&apos;)</inlineHelpText>
    <label>Accountable for Relationship</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>