force-app/main/default/objects/Key_Contacts__c/fields/Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Additional_Context__c</fullName>
    <label>Additional Context</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>