force-app/main/default/objects/Key_Contacts__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <formula>TEXT(Key_Contact_Name__r.IM_Functional_Area__c)</formula>
    <inlineHelpText>Populated from Contact record</inlineHelpText>
    <label>Functional Area</label>
    <type>Text</type>
</CustomField>