force-app/main/default/objects/Key_Contacts__c/fields/IME_Strength_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>IME_Strength_of_Relationship__c</fullName>
    <description>See Case 03214277</description>
    <inlineHelpText>Indicate the current strength of this relationship</inlineHelpText>
    <label>Strength of Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>