force-app/main/default/objects/Key_Contacts__c/fields/Key_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This must be an Existing Contact in SFDC</inlineHelpText>
    <label>Key Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>