force-app/main/default/objects/Key_Contacts__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this contact is the Primary Contact for this Account Plan.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>