force-app/main/default/objects/Key_Contacts__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>TEXT( Key_Contact_Name__r.IM_Role__c )</formula>
    <inlineHelpText>Populated from Contact record</inlineHelpText>
    <label>Role</label>
    <type>Text</type>
</CustomField>