force-app/main/default/objects/Key_Contacts__c/fields/Stakeholder_Type__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Type__c</fullName>
    <formula>TEXT ( Key_Contact_Name__r.Challenger_Customer_Stakeholder_Profile__c )</formula>
    <inlineHelpText>Indicates which preference of customer stakeholder, based on the Challenger framework, this contact fits into. They could fit into the Hi-Per Focus Zone (the go-getter, the teacher, the skeptic) or the Core Focus Zone (the guide, the friend, the climber)</inlineHelpText>
    <label>Stakeholder Type</label>
    <type>Text</type>
</CustomField>