force-app/main/default/objects/Key_Contacts__c/fields/Strength_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Strength_of_Relationship__c</fullName>
    <formula>TEXT ( Key_Contact_Name__r.Quality_of_Relationship__c )</formula>
    <label>Strength of Relationship</label>
    <type>Text</type>
</CustomField>