force-app/main/default/objects/Key_Contacts__c/recordTypes/INTL_Key_Contacts.recordType-meta.xml
<RecordType>
    <fullName>INTL_Key_Contacts</fullName>
    <active>true</active>
    <label>INTL Key Contacts</label>
</RecordType>